default/objects/Application_Question__c/fields/Loan_Declaration_Field__c.field-meta.xml
<CustomField>
    <fullName>Loan_Declaration_Field__c</fullName>
    <label>Loan Declaration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>