default/objects/Application_Question__c/fields/Loan_Program__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Loan_Program__c</referenceTo>
    <relationshipLabel>Application Questions</relationshipLabel>
    <relationshipName>Application_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>