default/objects/Application_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Question</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
            </value>
            <value>
                <fullName>ApplicantConsent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>